# Courier-RL

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements-deploy.txt  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml
config/: default_training.yaml  jakarta_menteng.yaml  synthetic_smoke.yaml
data/maps/: kebayoran_baru_routing.boundary.geojson  menteng_routing.boundary.geojson  menteng_routing.graphml  tebet_routing.boundary.geojson
scripts/: _bootstrap.py  download_map.py  evaluate.py  run_demo.py  serve_demo.py  train.py
src/agents/: env_factory.py  evaluate_agent.py  train_core.py  train_dqn.py  train_ppo.py
src/baselines/: base_policy.py  earliest_deadline.py  greedy_score.py  nearest_neighbor.py  random_policy.py  registry.py
src/envs/: courier_routing_env.py
src/map/: graph_utils.py  node_sampler.py  osm_loader.py
src/simulation/: courier_state.py  package_generator.py  traffic_model.py
src/utils/: config.py  logger.py
src/visualization/: dashboard.py  folium_map.py  interactive_app.py  plot_metrics.py
src/visualization/static/: interactive.html
tests/: conftest.py  test_env.py  test_interactive.py  test_map_loader.py  test_reward.py
